--- a/Home_Page/src/index.html
+++ b/Home_Page/src/index.html
@@ -274,7 +274,7 @@
             <div class="relative group overflow-hidden rounded-xl">
               <div class="absolute inset-0 bg-gradient-to-br from-[#7EA16B]/80 to-[#1C3144]/80 opacity-0 group-hover:opacity-90 transition-all duration-300 z-10 flex items-center justify-center">
                 <div class="text-center p-4 transform translate-y-8 group-hover:translate-y-0 transition-transform duration-300">
-                  <div class="text-xl font-medium bg-black bg-clip-text text-transparent mb-2">Week One: Overview of Indo-Pacific Studies</div>
+                  <div class="text-xl font-medium bg-black bg-clip-text text-transparent mb-2">Week 1: Overview of Indo-Pacific Studies</div>
                   <p class="text-gray-200 mb-4">Broad Indo-Pacific (encompassing Indian, Southern, and Pacific Oceans, South and Southeast Asia, North and Northeast Asia, and west coasts of the Americas)</p>
                   <button class="px-4 py-2 bg-[#1C3144]/20 backdrop-blur-sm rounded text-white hover:bg-[#1C3144]/30 transition-colors duration-300">View Details</button>
                 </div>
