UPDATED HTML + Buttons for carousel

--- a/index.html
+++ b/index.html
@@ -182,14 +182,18 @@
   <div class="carousel-container">
     <div class="carousel-track">
 
-      <!-- Week 1 -->
+     <!--wEEK 1-->
       <div class="carousel-slide active">
         <img src="Images/week1.jpg" alt="Week 1">
         <div class="carousel-info">
           <h2>Week 1</h2>
           <p>Overview of Indo-Pacific Studies</p>
+          <a href="week1.html" class="inline-block mt-2 px-4 py-2 bg-[#7EA16B] text-white rounded-lg hover:bg-[#617d52] transition">
+            Learn More
+          </a>
         </div>
       </div>
+
 
       <!-- Week 2 -->
       <div class="carousel-slide">
@@ -197,6 +201,9 @@
         <div class="carousel-info">
           <h2>Week 2</h2>
           <p>Defining the Indo-Pacific region and its diversity</p>
+          <a href="week2.html" class="inline-block mt-2 px-4 py-2 bg-[#7EA16B] text-white rounded-lg hover:bg-[#617d52] transition">
+          Learn More
+          </a>
         </div>
       </div>
 
@@ -206,6 +213,9 @@
         <div class="carousel-info">
           <h2>Week 3</h2>
           <p>Geopolitics and the Indian Ocean Region</p>
+          <a href="week3.html" class="inline-block mt-2 px-4 py-2 bg-[#7EA16B] text-white rounded-lg hover:bg-[#617d52] transition">
+          Learn More
+          </a>
         </div>
       </div>
 
@@ -215,6 +225,9 @@
         <div class="carousel-info">
           <h2>Week 4</h2>
           <p>Non-state actors and assessment</p>
+          <a href="week4.html" class="inline-block mt-2 px-4 py-2 bg-[#7EA16B] text-white rounded-lg hover:bg-[#617d52] transition">
+          Learn More
+          </a>
         </div>
       </div>
 
@@ -224,6 +237,9 @@
         <div class="carousel-info">
           <h2>Week 5</h2>
           <p>Indian Ocean’s role in global trade and security</p>
+          <a href="week5.html" class="inline-block mt-2 px-4 py-2 bg-[#7EA16B] text-white rounded-lg hover:bg-[#617d52] transition">
+          Learn More
+          </a>
         </div>
       </div>
 
@@ -233,6 +249,9 @@
         <div class="carousel-info">
           <h2>Week 6</h2>
           <p>Australia’s global engagement</p>
+          <a href="week6.html" class="inline-block mt-2 px-4 py-2 bg-[#7EA16B] text-white rounded-lg hover:bg-[#617d52] transition">
+          Learn More
+          </a>
         </div>
       </div>
 
@@ -242,6 +261,9 @@
         <div class="carousel-info">
           <h2>Week 7</h2>
           <p>Australia’s relations with Northeast Asia</p>
+          <a href="week7.html" class="inline-block mt-2 px-4 py-2 bg-[#7EA16B] text-white rounded-lg hover:bg-[#617d52] transition">
+          Learn More
+          </a>
         </div>
       </div>
 
@@ -251,6 +273,9 @@
         <div class="carousel-info">
           <h2>Week 8</h2>
           <p>Assessment on Indo-Pacific knowledge</p>
+          <a href="week8.html" class="inline-block mt-2 px-4 py-2 bg-[#7EA16B] text-white rounded-lg hover:bg-[#617d52] transition">
+          Learn More
+          </a>
         </div>
       </div>
 
@@ -260,6 +285,9 @@
         <div class="carousel-info">
           <h2>Week 9</h2>
           <p>Australia’s relations with Southeast Asia</p>
+          <a href="week9.html" class="inline-block mt-2 px-4 py-2 bg-[#7EA16B] text-white rounded-lg hover:bg-[#617d52] transition">
+          Learn More
+          </a>
         </div>
       </div>
 
@@ -269,6 +297,9 @@
         <div class="carousel-info">
           <h2>Week 10</h2>
           <p>Australia’s Law of the Sea diplomacy</p>
+          <a href="week10.html" class="inline-block mt-2 px-4 py-2 bg-[#7EA16B] text-white rounded-lg hover:bg-[#617d52] transition">
+          Learn More
+          </a>
         </div>
       </div>
 
@@ -278,6 +309,9 @@
         <div class="carousel-info">
           <h2>Week 11</h2>
           <p>UNCLOS and Antarctica</p>
+          <a href="week11.html" class="inline-block mt-2 px-4 py-2 bg-[#7EA16B] text-white rounded-lg hover:bg-[#617d52] transition">
+          Learn More
+          </a>
         </div>
       </div>
 
@@ -287,6 +321,9 @@
         <div class="carousel-info">
           <h2>Week 12</h2>
           <p>Space and assessment</p>
+          <a href="week12.html" class="inline-block mt-2 px-4 py-2 bg-[#7EA16B] text-white rounded-lg hover:bg-[#617d52] transition">
+          Learn More
+          </a>
         </div>
       </div>
 
@@ -296,6 +333,9 @@
         <div class="carousel-info">
           <h2>Week 13</h2>
           <p>Course synthesis and exam preparation</p>
+          <a href="week13.html" class="inline-block mt-2 px-4 py-2 bg-[#7EA16B] text-white rounded-lg hover:bg-[#617d52] transition">
+          Learn More
+          </a>
         </div>
       </div>
 
